Added information about author.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+    <!-- Dodanie TextView na górze ekranu do wyświetlania imienia i nazwiska autora -->
+    <TextView
+        android:id="@+id/textAuthor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Autor: Marcin Tarkowski"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:padding="16dp" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -11,7 +22,8 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="?attr/actionBarTheme"
+        android:layout_below="@id/textAuthor" />
 
     <EditText
         android:id="@+id/editTextItem"
@@ -33,4 +45,5 @@
         android:layout_height="match_parent"
         android:layout_below="@id/buttonAdd"
         android:layout_marginTop="16dp" />
+
 </RelativeLayout>
